--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
                                 <div className="panel-header">
                                     <div>
                                         <div className="panel-title">Ranking Stack</div>
-                                        <div className="panel-subtitle">Reorder like you’re wiring a mainframe.</div>
+                                        <div className="panel-subtitle">Reorder</div>
                                     </div>
                                 </div>
                                 <div
