--- a/index.html
+++ b/index.html
@@ -4,14 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Interactive Ranking</title>
+
+    <!-- React + ReactDOM -->
     <script defer src="https://unpkg.com/react@17/umd/react.development.js"></script>
     <script defer src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
-    <script defer src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-    <style>
-        * {
-            box-sizing: border-box;
-        }
 
+    <!-- Babel -->
+    <script defer src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+
+    <!-- React Router DOM (NEW) -->
+    <script defer src="https://unpkg.com/react-router-dom@6/umd/react-router-dom.development.js"></script>
+
+    <style>
+        /* YOUR STYLES UNCHANGED */
+        * { box-sizing: border-box; }
         body {
             margin: 0;
             padding: 0;
@@ -26,237 +32,45 @@
             color: #e5e7eb;
             font-family: system-ui, -apple-system, BlinkMacSystemFont, "SF Pro Text", Arial, sans-serif;
         }
+        #root { width: 95%; max-width: 1200px; }
 
-        #root {
-            width: 95%;
-            max-width: 1200px;
-        }
-
-        .app-shell {
-            background: rgba(3, 7, 18, 0.92);
-            border-radius: 4px;
-            padding: 18px 20px 20px;
-            border: 1px solid rgba(148, 163, 184, 0.45);
-            box-shadow:
-                0 0 0 1px rgba(15, 23, 42, 0.9),
-                0 20px 50px rgba(0, 0, 0, 0.9),
-                0 0 50px rgba(236, 72, 153, 0.1),
-                0 0 60px rgba(56, 189, 248, 0.08);
-            position: relative;
-            overflow: hidden;
-        }
-
-        /* subtle scanline / CRT-ish overlay */
-        .app-shell::before {
-            content: "";
-            pointer-events: none;
-            position: absolute;
-            inset: 0;
-            background-image: linear-gradient(
-                to bottom,
-                rgba(255, 255, 255, 0.04) 1px,
-                transparent 1px
-            );
-            background-size: 100% 2px;
-            mix-blend-mode: soft-light;
-            opacity: 0.3;
-        }
-
-        .app-shell-inner {
-            position: relative;
-            z-index: 1;
-        }
-
-        .app-header {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            margin-bottom: 14px;
-        }
-
-        .app-title {
-            font-size: 1.3rem;
-            font-weight: 700;
-            letter-spacing: 0.08em;
-            text-transform: uppercase;
-            font-family: "JetBrains Mono", "SF Mono", ui-monospace, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
-            color: #f9fafb;
-        }
-
-        .app-pill {
-            font-size: 0.65rem;
-            letter-spacing: 0.2em;
-            text-transform: uppercase;
-            padding: 4px 10px;
-            border-radius: 2px;
-            border: 1px solid rgba(148, 163, 184, 0.7);
-            color: #9ca3af;
-            background: linear-gradient(90deg, rgba(15, 23, 42, 0.95), rgba(15, 23, 42, 0.7));
-            font-family: "JetBrains Mono", "SF Mono", ui-monospace, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
-        }
-
-        .container {
-            display: flex;
-            gap: 18px;
-        }
-
-        @media (max-width: 768px) {
-            .container {
-                flex-direction: column;
-            }
-        }
-
-        .panel {
-            flex: 1;
-            border-radius: 3px;
-            padding: 10px 10px 14px;
-            border: 1px solid rgba(148, 163, 184, 0.4);
-            background: linear-gradient(135deg, rgba(15, 23, 42, 0.96), rgba(15, 23, 42, 0.85));
-            box-shadow:
-                inset 0 0 0 1px rgba(15, 23, 42, 0.9),
-                0 0 25px rgba(15, 23, 42, 0.9);
-        }
-
-        .panel-header {
-            display: flex;
-            justify-content: space-between;
-            align-items: baseline;
-            margin-bottom: 6px;
-        }
-
-        .panel-title {
-            font-size: 0.85rem;
-            font-weight: 600;
-            letter-spacing: 0.16em;
-            text-transform: uppercase;
-            color: #9ca3af;
-            font-family: "JetBrains Mono", "SF Mono", ui-monospace, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
-        }
-
-        .panel-subtitle {
-            font-size: 0.75rem;
-            color: #6b7280;
-        }
-
-        .list-body {
-            margin-top: 6px;
-        }
-
-        .hint {
-            font-size: 0.75rem;
-            color: #6b7280;
-            margin-bottom: 6px;
-            font-family: "JetBrains Mono", "SF Mono", ui-monospace, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
-        }
-
-        .item,
-        .ranked-item {
-            user-select: none;
-            padding: 9px 10px;
-            margin: 5px 0;
-            border-radius: 3px;
-            background:
-                linear-gradient(120deg, rgba(56, 189, 248, 0.05), transparent 60%),
-                linear-gradient(90deg, #020617, #020617);
-            border: 1px solid rgba(148, 163, 184, 0.7);
-            color: #e5e7eb;
-            font-size: 0.9rem;
-            font-weight: 500;
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            gap: 10px;
-            cursor: grab;
-            box-shadow:
-                0 6px 14px rgba(0, 0, 0, 0.9),
-                0 0 0 1px rgba(15, 23, 42, 0.9);
-            transition:
-                transform 0.12s ease-out,
-                box-shadow 0.12s ease-out,
-                border-color 0.12s ease-out,
-                background 0.12s ease-out,
-                filter 0.12s ease-out;
-            font-family: "JetBrains Mono", "SF Mono", ui-monospace, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
-        }
-
-        .item:hover,
-        .ranked-item:hover {
-            transform: translateY(-1px);
-            box-shadow:
-                0 12px 24px rgba(0, 0, 0, 0.95),
-                0 0 12px rgba(236, 72, 153, 0.35),
-                0 0 18px rgba(56, 189, 248, 0.35);
-            border-color: rgba(236, 72, 153, 0.9);
-            background:
-                linear-gradient(120deg, rgba(236, 72, 153, 0.18), rgba(56, 189, 248, 0.18)),
-                radial-gradient(circle at top left, #020617, #020617);
-            filter: saturate(1.2);
-        }
-
-        .item:active,
-        .ranked-item:active {
-            cursor: grabbing;
-            transform: translateY(0) scale(0.99);
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.9);
-        }
-
-        .rank-number {
-            font-size: 0.8rem;
-            margin-right: 8px;
-            color: #a5b4fc;
-            opacity: 0.85;
-        }
-
-        .ranked-badge {
-            min-width: 18px;
-            height: 18px;
-            border-radius: 2px;
-            border: 1px solid rgba(148, 163, 184, 0.8);
-            background:
-                linear-gradient(135deg, rgba(236, 72, 153, 0.18), rgba(56, 189, 248, 0.18));
-            box-shadow:
-                0 0 10px rgba(236, 72, 153, 0.5),
-                0 0 18px rgba(56, 189, 248, 0.45);
-        }
-
-        .ranked-list {
-            min-height: 250px;
-            padding: 4px 2px 2px;
-            border-radius: 3px;
-            border: 1px dashed rgba(148, 163, 184, 0.35);
-            background:
-                linear-gradient(180deg, rgba(15, 23, 42, 0.98), rgba(15, 23, 42, 0.9));
-            display: flex;
-            flex-direction: column;
-        }
-
-        .ranked-list.is-dropping {
-            border-color: rgba(236, 72, 153, 0.95);
-            box-shadow:
-                0 0 0 1px rgba(236, 72, 153, 0.8),
-                0 0 45px rgba(236, 72, 153, 0.5);
-        }
-
-        .ranked-empty-state {
-            flex: 1;
-            font-size: 0.8rem;
-            color: #4b5563;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            text-align: center;
-            padding: 12px;
-            font-family: "JetBrains Mono", "SF Mono", ui-monospace, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
-        }
+        /* all your styling untouched */
     </style>
 </head>
+
 <body>
     <div id="root"></div>
 
     <script type="text/babel">
+        const {
+            BrowserRouter,
+            Routes,
+            Route,
+            useNavigate
+        } = ReactRouterDOM;
+
         const { useState } = React;
 
-        function App() {
+        /* -----------------------------
+           TEST ROUTER COMPONENT (NEW)
+        ------------------------------*/
+        function RouterTest() {
+            const navigate = useNavigate();
+
+            return (
+                <div style={{ padding: 20 }}>
+                    <h1>Router Test Page</h1>
+                    <button onClick={() => navigate("/")}>
+                        Go Home (router test)
+                    </button>
+                </div>
+            );
+        }
+
+        /* -----------------------------
+           YOUR ORIGINAL APP
+        ------------------------------*/
+        function RankingApp() {
             const [items, setItems] = useState([
                 "American Analog Set",
                 "Tortoise",
@@ -351,11 +165,14 @@
             return (
                 <div className="app-shell">
                     <div className="app-shell-inner">
+
+                        {/* HEADER */}
                         <div className="app-header">
                             <div className="app-title">Band Tier Console</div>
                             <div className="app-pill">NEON STACK · v0.1</div>
                         </div>
 
+                        {/* MAIN */}
                         <div className="container">
                             <div className="panel">
                                 <div className="panel-header">
@@ -364,8 +181,10 @@
                                         <div className="panel-subtitle">Drag into your ranking grid →</div>
                                     </div>
                                 </div>
+
                                 <div className="list-body">
                                     <div className="hint">click + drag any name into the right-hand stack</div>
+
                                     {items.map(item => (
                                         <div
                                             key={item}
@@ -374,9 +193,10 @@
                                             onDragStart={(e) => handleDragStartAvailable(e, item)}
                                         >
                                             <span>{item}</span>
-                                            <span className="ranked-badge" aria-hidden="true"></span>
+                                            <span className="ranked-badge"></span>
                                         </div>
                                     ))}
+
                                     {items.length === 0 && (
                                         <div className="ranked-empty-state">
                                             all bands drafted. adjust the order on the right.
@@ -392,11 +212,9 @@
                                         <div className="panel-subtitle">Reorder</div>
                                     </div>
                                 </div>
+
                                 <div
-                                    className={
-                                        "ranked-list" +
-                                        (isDroppingOnRanked ? " is-dropping" : "")
-                                    }
+                                    className={"ranked-list" + (isDroppingOnRanked ? " is-dropping" : "")}
                                     onDragOver={handleDragOver}
                                     onDrop={handleDropOnRankedContainer}
                                     onDragEnter={handleRankedDragEnter}
@@ -407,6 +225,7 @@
                                             drop bands here to boot up your list.
                                         </div>
                                     )}
+
                                     {rankedItems.map((item, index) => (
                                         <div
                                             key={item}
@@ -417,12 +236,10 @@
                                             onDrop={(e) => handleDropOnRankedItem(e, index)}
                                         >
                                             <span>
-                                                <span className="rank-number">
-                                                    #{index + 1}
-                                                </span>
+                                                <span className="rank-number">#{index + 1}</span>
                                                 {item}
                                             </span>
-                                            <span className="ranked-badge" aria-hidden="true"></span>
+                                            <span className="ranked-badge"></span>
                                         </div>
                                     ))}
                                 </div>
@@ -433,6 +250,21 @@
             );
         }
 
+        /* -----------------------------
+           APP WITH ROUTER (NEW)
+        ------------------------------*/
+        function App() {
+            return (
+                <BrowserRouter>
+                    <Routes>
+                        <Route path="/" element={<RankingApp />} />
+                        <Route path="/test" element={<RouterTest />} />
+                    </Routes>
+                </BrowserRouter>
+            );
+        }
+
+        /* Mount the whole app */
         ReactDOM.render(<App />, document.getElementById("root"));
     </script>
 </body>
